--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -7,8 +7,8 @@
   <body>
     <h1>BMI CALCULATOR</h1>
     <form action="/" method="post">
-      <input type="text" name="weight" placeholder="weight in pounds" />
-      <input type= "text" name="height" placeholder="height in inches" />
+      <input type="text" name="weight" placeholder="weight in kg" />
+      <input type= "text" name="height" placeholder="height in cm" />
       <button type="submit" value="submit">calculate bmi</button>
       </form>
 
